[gd_scene load_steps=5 format=3 uid="uid://lp6lq3ubash8"]

[ext_resource type="FontFile" uid="uid://qmniewrnwh5w" path="res://fonts/Xolonium-Regular.ttf" id="1_4f3rx"]
[ext_resource type="Script" path="res://hud.gd" id="1_mead0"]

[sub_resource type="InputEventAction" id="InputEventAction_d3grj"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_h1lm6"]
events = [SubResource("InputEventAction_d3grj")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_mead0")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_4f3rx")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -99.5
offset_right = 240.0
offset_bottom = 99.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_4f3rx")
theme_override_font_sizes/font_size = 64
text = "Dodge the creeps!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.685
anchor_right = 0.5
anchor_bottom = 0.685
offset_left = -70.5
offset_top = -33.2
offset_right = 70.5
offset_bottom = 33.8
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
shortcut = SubResource("Shortcut_h1lm6")
text = "Start"
metadata/_edit_use_anchors_ = true

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[connection signal="start_game" from="." to="." method="_on_start_game"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
